2002-02-04  Karsten Weiss  <knweiss@gmx.de>

	* gui/gdmconfig-strings.c: Fixed a typo.

        * config/gettextfoo.h: Fixed a typo.
        * daemon/verify-pam.c: Ditto.
        * gui/gdmconfig-strings.c: Ditto.

2002-01-30  Alex Larsson  <alexl@redhat.com>

	* configure.in:
	Add new makefiles to output.

	* gui/greeter/Makefile.am:
	Add themes subdir.
	Add config file and theme dir defines.
	Add greeter_configuration.h

	* gui/greeter/greeter.c:
	Parse config options.
	Handle theme data search path.

	* gui/greeter/greeter_parser.[ch]:
	Handle theme data search path.

	* gui/themes/*:
	* gui/themes/circles/*:
	Checking in theme data.
	
2002-01-29  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/greeter_canvas_item.c:
	Remove old anchor leftovers.
	Set font_desc instead of font for text items.
	
	* gui/greeter/greeter_geometry.c:
	Set font_desc instead of font for text items.

2002-01-29  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am:
	Add WARN_CFLAGS to INCLUDES.
	mumble mumble...

	* gui/greeter/greeter.c:
	Call greeter_layout() from main().

	* gui/greeter/greeter_canvas_item.c:
	Change anchor handling. Now it's done manually by
	greeter_geometry.c for everything but labels.

	* gui/greeter/greeter_geometry.[ch]:
	Boxes now work.

	* gui/greeter/greeter_parser.c:
	* gui/greeter/greeter_item.h:
	Add expand property to items
	Build root item.

2002-01-29  Alexander Larsson  <alla@lysator.liu.se>

	* gui/greeter/Makefile.am:
	Added new files.

	* gui/greeter/greeter.c:
	Update to get the root GreeterItemInfo.

	* gui/greeter/greeter_item.[ch]:
	Make items keep track of their parent.
	Add orig_pixbufs[].
	Add box_min_widht/height and size allocation stuff

	* gui/greeter/greeter_parser.[ch]:
	Rename homogenous to homogeneous.
	Parse box min-width/height
	Load pixmaps to orig_pixbufs[]
	Keep track of items parents
	Create root item info

	* gui/greeter/greeter_canvas_item.[ch]:
	* gui/greeter/greeter_geometry.[ch]:
	New files. Not used yet.
	