@@ -68,8 +68,8 @@
       <item type="label">
         <pos anchor="n" x="50%"/>
         <normal color="#000000" font="Sans 18"/>
-	<text val="Welcome to %h.%d"/>
-	<text lang="se" val="Välkommen till %h"/>
+	<text val="Welcome to %h"/>
+	<text lang="sv" val="Välkommen till %h"/>
       </item>
       <item type="label" id="pam-conversation">
         <pos anchor="n" x="50%"/>
