@@ -1,3 +1,14 @@
+2002-02-04  Alex Larsson  <alexl@redhat.com>
+
+	* gui/greeter/greeter.c:
+	Set the locale.
+
+	* gui/greeter/greeter_parser.c:
+	Fix translation of strings.
+	
+	* gui/greeter/themes/circles/circles.xml:
+	Fix test translation.
+
 2002-02-04  Karsten Weiss  <knweiss@gmx.de>
 
 	* gui/gdmconfig-strings.c: Fixed a typo.
